--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 	 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+<!-- 	<form name="randform">
+<input type="button" value="Create Random String" onClick="randomString();">&nbsp;
+<input type="text" name="randomfield" value="">
+</form> -->
 <form>
 		 <label><input type="text" id="name"></label>
 </form>
-<button onclick="myFunction1()">ok</button>     
+<button onclick="">ok</button>     
+<!-- <button onclick="isPrime()">ok</button>     
+ -->
 <p id="hex"></p>
 <div id="col_div"></div>
  <script type="text/javascript" src="./js/script.js"></script>
